--- a/data/pubspec.yaml
+++ b/data/pubspec.yaml
@@ -11,7 +11,11 @@ publish_to: none
 dependencies:
   core:
     path: '../core'
+  get_it: ^7.2.0
+  injectable: ^2.1.0
+  injectable_generator: ^2.1.3
 
 dev_dependencies:
+  build_runner: ^2.3.0
   lints: ^2.0.0
   test: ^1.16.0
