--- a/di/pubspec.yaml
+++ b/di/pubspec.yaml
@@ -14,6 +14,12 @@ dev_dependencies:
   build_runner: ^2.3.0
 
 dependencies:
+  core:
+    path: '../core'
+
+  data:
+    path: '../data'
+
   get_it: ^7.2.0
   injectable: ^2.1.0
   injectable_generator: ^2.1.3
